language/move-lang/tests/move_check/expansion/number_literal_too_long_u128.move
module 0x42::M {
    fun long_u128() {
        0x0FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFu128;
        0x1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFu128;
        340282366920938463463374607431768211455u128;
        340282366920938463463374607431768211456u128;
    }
}
